# ps-parser

./: .gitignore  Cargo.toml  README.md  build.rs  comprehensive_deobfuscated.txt  comprehensive_output.txt  parser_focused_deobfuscated.txt  parser_focused_output.txt  rustfmt.toml  script.ps1  stress_deobfuscated.txt
src/: lib.rs  main.rs  parser.rs  powershell.pest  ps_parser.rs
src/parser/: command.rs  comparison.rs  error.rs  predicates.rs  script_result.rs  stream_message.rs  token.rs  value.rs  variables.rs
src/parser/predicates/: arithmetic.rs  bitwise.rs  comparison.rs  contain.rs  join.rs  logical.rs  replace.rs  split.rs  type_check.rs
src/parser/value/: class.rs  method_error.rs  params.rs  ps_string.rs  runtime_object.rs  script_block.rs  system_convert.rs  system_encoding.rs  type_info.rs  val_error.rs  val_type.rs
src/parser/value/ps_string/: normalize.rs  pad.rs  substring.rs  to_upper_lower.rs  trim.rs
src/parser/value/val_type/: runtime_type.rs  type_info.rs
src/parser/variables/: function.rs  scopes.rs  variable.rs
test_scripts/: Cargo.toml  comprehensive_test.ps1  parser_focused_test.ps1  run_tests.ps1  stress_test.ps1
test_scripts/comprehensive/: deobfuscated.txt  input.ps1  output.txt
test_scripts/parser_focused/: deobfuscated.txt  input.ps1  output.txt
test_scripts/src/: main.rs
test_scripts/stress/: deobfuscated.txt  input.ps1  output.txt
