[package]
name = "ps-parser"
description = "The Powershell Parser"
version = "0.1.0-pre"
authors = ["radkum <radoslaw.kumorekit@gmail.com>"]
edition = "2024"
keywords = ["powershell","obfuscation", "parser", "pest"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"

#[lib]
#path = "src/lib.rs"

[dependencies]
log = "0.4.27"
pest = "2.7.8"
pest_derive = "2.7"
regex = "1.11.1"
smart-default = "0.7.1"
thiserror-no-std = "2.0.2"
unicode-normalization = "0.1"

[build-dependencies]
pest_generator = "2.7"
