[package]
name = "ps-parser"
version = "0.2.2"
description = "The Powershell Parser"
homepage = "https://github.com/radkum/ps-parser"
repository = "https://github.com/radkum/ps-parser"
authors = ["radkum <radoslaw.kumorekit@gmail.com>"]
edition = "2024"
keywords = ["powershell","obfuscation", "parser", "pest"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
env_logger = "0.11.8"
icu = { version = "1.4", optional = true, features = ["compiled_data"] }
configparser = "3.1.0"
log = "0.4.27"
pest = "2.7.8"
pest_derive = "2.7"
regex = "1.11.1"
smart-default = "0.7.1"
thiserror-no-std = "2.0.2"
unicode-normalization = "0.1"
phf = { version = "0.13.1", features = ["macros"] }

[build-dependencies]
pest_generator = "2.7"

[features]
default = ["en-us"]

# this localle is used to string comparison. It's differ that default, because A > a #true, when without local it's #false
en-us = ["dep:icu"]
